--- a/public/backend/css/style.css
+++ b/public/backend/css/style.css
@@ -2531,7 +2531,7 @@ ul.inbox-pagination li {
 }
 /*-- gallery --*/
 .w3layouts-main h2 {
-    color: #8b5c7e;
+    color: #f4f9f8;
     font-size: 29px;
     letter-spacing: 2px;
     text-transform: uppercase;
@@ -2541,7 +2541,7 @@ ul.inbox-pagination li {
 .w3layouts-main {
     width: 30%;
     margin: 5em auto;
-    background: rgba(171, 119, 157, 0.27);
+    background: rgba(30, 4, 85, 0.87);
     padding: 42px 35px;
 }
 /*--//header--*/
@@ -2593,7 +2593,7 @@ input.ggg {
     font-size: 18px;
     text-transform: uppercase;
     letter-spacing: 2px;
-    background: #f0bcb4;
+    background: #4b71e2;
     color: white;
     border: none;
     outline: none;
@@ -2607,7 +2607,7 @@ input.ggg {
     -ms-transition: 0.5s all;
 }
 .w3layouts-main input[type="submit"]:hover {
-    background: #8b5c7e;
+    background: #3a4995;
     transition: 0.5s all;
     -webkit-transition: 0.5s all;
     -o-transition: 0.5s all;
@@ -2615,7 +2615,7 @@ input.ggg {
     -ms-transition: 0.5s all;
 }
 .w3layouts-main p a {
-    color: #f0bcb4;
+    color: #382fe1c7;
     padding: 10px;
 }
 .w3layouts-main p a:hover {
